fixed media query for header overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,11 @@ body {
     transition: 1s;
   }
 }
+@media (max-width:767px) and (orientation: landscape) {
+  .header__menu{
+    overflow: auto;
+  }
+}
 
 
 
@@ -295,12 +300,12 @@ body {
     font-size: 25px;
   }
 }
-@media (max-width:767px) and (orientation: landscape) {
+/* @media (max-width:767px) and (orientation: landscape) {
   .header__link{
       margin: 5px auto;
       font-size: 15px;
   }
-}
+} */
 
 
 .header__content{
